--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "copy-to-clipboard": "^3.3.3",
     "highlight.js": "^11.11.1",
+    "is-mobile": "^5.0.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-mathjax3": "^5.2.0",
     "pinia": "^3.0.3",
     "sass": "^1.93.2",
     "vue": "^3.5.22",
